--- a/public/donkey-demo/index.html
+++ b/public/donkey-demo/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta charset="UTF-8" />
-		<title>HTML5版驴子跳(Donkey Jump) - HTML5游戏 - 御剑神兵的博客 - 专注前端技术研究</title>
+		<title></title>
 		<meta name="description" content="这是一个基于HTML5 Canvas和Audio开发的游戏,提供源码下载和详细的注释" />
 		<meta name="keywords"  content="Web前端, 前端开发, JavaScript, HTML, Canvas, Audio, HTML5画布, HTML5游戏, HTML5版驴子跳(Donkey Jump)" />
 		<link type="text/css" rel="stylesheet" href="css/main.css" />
