--- a/public/html/entry.html
+++ b/public/html/entry.html
@@ -98,9 +98,12 @@
 		<script type="text/javascript" src="../js/lib/soundjs-NEXT.min.js"></script>
 		<script type="text/javascript" src="../js/lib/tweenjs-NEXT.min.js"></script> -->
 		<script type="text/javascript" src="../js/app/utils/KeyEvent.js"></script>
+		<script type="text/javascript" src="../js/app/utils/dimention.js"></script>
 
 		<script type="text/javascript" src="../js/app/spriter/donkeyFrames.js"></script>
+		<script type="text/javascript" src="../js/app/spriter/stairFrames.js"></script>
 		<script type="text/javascript" src="../js/app/spriter/donkey.js"></script>
+		<script type="text/javascript" src="../js/app/spriter/stair.js"></script>
 		<script type="text/javascript" src="../js/app/class/viewport.js"></script>
 		<script type="text/javascript" src="../js/app/spriter/donkeyManager.js"></script>
 
