--- a/public/html/entry.html
+++ b/public/html/entry.html
@@ -102,8 +102,11 @@
 
 		<script type="text/javascript" src="../js/app/spriter/donkeyFrames.js"></script>
 		<script type="text/javascript" src="../js/app/spriter/stairFrames.js"></script>
-		<script type="text/javascript" src="../js/app/spriter/donkey.js"></script>
+		<script type="text/javascript" src="../js/app/spriter/propFrames.js"></script>
 		<script type="text/javascript" src="../js/app/spriter/stair.js"></script>
+		<script type="text/javascript" src="../js/app/spriter/prop.js"></script>
+		<script type="text/javascript" src="../js/app/spriter/donkey.js"></script>
+
 		<script type="text/javascript" src="../js/app/class/viewport.js"></script>
 		<script type="text/javascript" src="../js/app/spriter/donkeyManager.js"></script>
 
